tests/paczka1/small_fuzzy/69799205.err
Error in line 2: 1DC S145 23,5
Error in line 1: abM A634 13,2
Error in line 5: abM S661 4,2
Error in line 13: gTt4r g661 80,5
Error in line 8: ypB3Gut S661 90,9
